--- a/app/index.htm
+++ b/app/index.htm
@@ -4,7 +4,7 @@
 <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
 <script src="js/app.shoof-ui.js"></script>
-<script src="app/app.shoof.ui.min.css"></script>
+<script src="app/app.shoof.ui.css"></script>
   <meta charset="utf-8">
   <title>Mico SC-02 frontend prototype</title>
 </head>
