--- a/app/index.html
+++ b/app/index.html
@@ -11,14 +11,43 @@
   <meta charset="utf-8">
   <title>Mico SC-02 frontend prototype</title>
 </head>
-<body ng-controller="UiCtrl">
+<body ng-controller="ShoofCtrl">
+  
   <div class="row">
     <div class="large-12 columns">
       <h1>MICO SC-02 <small>Wordpress-less HTML5/JS angular based frontend prototype</small></h1>
       <hr/>
     </div>
   </div> 
-<wl-container type="News1" data-binder="TopNewsDataBinder" data-adapter="DefaultDataAdapter" data-renderer="news-renderer"></wl-container>
-  
+
+  <wl-container ctn="News1" uri="/containers/News1.json"></wl-container>
+  <script type="text/javascript">
+window.containers['/data/News1.json'] = {
+	ctn: 'News1',
+	origin: '/data/News1.json',
+	items: [
+		{
+			'id': 11,
+			'title': 'Obama just died',
+			'content': 'He was bombed by terrorists while having his usual daily shit',
+			'uri': 'http://mysite.com/api/posts/11',
+			'meta': {
+				'thumb': 'http://mysite.com/images/11'
+			}
+		},
+		{
+			'id': 5,
+			'title': 'Ukranians not happy about new Nike shoes model',
+			'content': 'We interviewed some ukranians, they really love Nike shoes.',
+			'uri': 'http://mysite.com/api/posts/5',
+			'meta': {
+				'thumb': 'http://mysite.com/images/5'
+			}
+		},
+
+	], 
+	skin: 'news'
+};
+  </script>
 </body>
 </html>
