Add other stuff

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
     </div>
   </div> 
 
-  <wl-container ctn="News1" uri="/containers/News1.json"></wl-container>
+  <wl-container ctn="News1" uri="/data/News1.json"></wl-container>
   <script type="text/javascript">
 window.containers['/data/News1.json'] = {
 	ctn: 'News1',
