--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,8 @@
 
 
   <wl-container uri="/data/News1.json" stack="stack"></wl-container>
-<wl-container uri="/data/News1.json" stack="stack"></wl-container>
+  <wl-container uri="/data/News1.json" stack="stack"></wl-container>
+  <wl-container uri="/data/Video.json" stack="stack"></wl-container>
 
   <script type="text/javascript">
 window.containers['/data/News1.json'] = {
