Video container skin

--- a/app/index.html
+++ b/app/index.html
@@ -76,6 +76,23 @@ window.containers['/data/News1.json'] = {
 	], 
 	"skin": "news"
 };
+window.containers['/data/Video.json'] = {
+  "ctn": "Video",
+  "origin": "/data/Video.json",
+  "items": [
+    {
+      "id": 17,
+      "title": "Best video ever",
+      "content": "yeeeee",
+      "uri": "http://mysite.com/api/posts/11",
+      "meta": {
+        "thumb": "http://mysite.com/images/11",
+        "videoURL": "https://www.youtube.com/embed/ee925OTFBCA" 
+      }
+    }
+  ], 
+  "skin": "video"
+};
   </script>
 </body>
 </html>
