--- a/app/index.html
+++ b/app/index.html
@@ -23,11 +23,7 @@
 
   <div class="row">
     <div class="large-4 columns">
-      <h6>Context Inspector</h6>
-      <ul><li ng-repeat="(k, v) in context">Property <strong>{{k}}</strong>, value <strong>{{v}}</strong></li></ul>
-    </div>
-    <div class="large-4 columns">
-      <h6>Context modifier</h6>
+      <h5>Context modifier</h5>
       <form ng-submit="submit()">
         <input type="text" ng-model="contextProperty" placeholder="Context property"/>
         <input type="text" ng-model="contextPropertyValue" placeholder="Context property value"/>
@@ -35,20 +31,27 @@
         <input type="button" ng-click="reset()" value="reset" class="button small round alert" />
       </form>     
     </div>
-    <div class="large-4 columns">
-      <h6>Current stack</h6>
- 		<ul>
-          <li ng-repeat="(k, v) in stack">Container <strong>{{k}}</strong><br /> Current origin <strong>{{v}}</strong></li>
-        </ul>
+    <div class="large-3 columns">
+      <h5>Context Inspector</h5>
+      <ul><li ng-repeat="(k, v) in context">Property <strong>{{k}}</strong>, value <strong>{{v}}</strong></li></ul>
+    </div>
+    <div class="large-5 columns">
+      <h5>Current stack</h5>
+ 		<table>
+          <tr ng-repeat="(k, v) in stack"><td>{{k}}</td><td>{{v}}</td></tr>
+        </table>
     </div>
      <hr/>
   </div> 
 
 
   <wl-container uri="/data/News1.json" stack="stack"></wl-container>
-<wl-container uri="/data/News1.json" stack="stack"></wl-container>
-
+  <wl-container uri="/data/News1.json" stack="stack"></wl-container>
+  <wl-container uri="/data/News1.json" stack="stack"></wl-container>
+  
   <script type="text/javascript">
+  //window.containers['/data/News1.json'] = undefined
+/*  
 window.containers['/data/News1.json'] = {
 	"ctn": "News1",
 	"origin": "/data/News1.json",
@@ -75,6 +78,7 @@ window.containers['/data/News1.json'] = {
 	], 
 	"skin": "news"
 };
+*/
   </script>
 </body>
 </html>
