--- a/app/index.html
+++ b/app/index.html
@@ -45,9 +45,9 @@
   </div> 
 
 
-  <wl-container uri="/data/News1.json" stack="stack"></wl-container>
-  <wl-container uri="/data/News1.json" stack="stack"></wl-container>
-  <wl-container uri="/data/Video.json" stack="stack"></wl-container>
+  <wl-container uri="data/News1.json" stack="stack"></wl-container>
+  <wl-container uri="data/News1.json" stack="stack"></wl-container>
+  <wl-container uri="data/Video.json" stack="stack"></wl-container>
 
   <script type="text/javascript">
 window.containers['/data/Video.json'] = {
