--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
 
   <div class="row">
     <div class="large-7 columns">
-  		<wl-container uri="data/Video.json" stack="stack"></wl-container>
+  		<wl-container uri="data/Video.json" stack="stack" observe="contentId,userId"></wl-container>
     <script type="text/javascript">
 window.containers['data/Video.json'] = {
   "ctn": "Video",
@@ -44,8 +44,7 @@ window.containers['data/Video.json'] = {
 };
   </script>
 
-  		<wl-container uri="data/News1.json" stack="stack"></wl-container>
-  		<wl-container uri="data/News1.json" stack="stack"></wl-container>
+  		<wl-container uri="data/News1.json" stack="stack" observe=""></wl-container>
 
     </div>
     <div class="large-5 columns">
@@ -66,7 +65,7 @@ window.containers['data/Video.json'] = {
   			</thead>
   			<tbody>
           		<tr ng-repeat="(k, v) in stack"><td>{{k}}</td><td>{{v}}</td></tr>
-			<tbody>
+			</tbody>
         </table>
       <h5>Context inspector</h5>
  		<table>
@@ -75,7 +74,16 @@ window.containers['data/Video.json'] = {
   			</thead>
   			<tbody>
           		<tr ng-repeat="(k, v) in context"><td>{{k}}</td><td>{{v}}</td></tr>
-			<tbody>
+			</tbody>
+        </table>
+     <h5>Observer inspector</h5>
+ 		<table>
+ 		    <thead>
+    		<tr><th>Container</th><th>Observers</th></tr>
+  			</thead>
+  			<tbody>
+          		<tr ng-repeat="(k, v) in observers"><td>{{k}}</td><td>{{v}}</td></tr>
+			</tbody>
         </table>
     </div>
     </div>
