--- a/app/famous.html
+++ b/app/famous.html
@@ -2,18 +2,18 @@
 <html>
 <head>
 
-<link href="../bower_components/foundation/css/normalize.css" rel="stylesheet" type="text/css" />
-<link href="../bower_components/foundation/css/foundation.css" rel="stylesheet" type="text/css" />
+<link href="/bower_components/foundation/css/normalize.css" rel="stylesheet" type="text/css" />
+<link href="/bower_components/foundation/css/foundation.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="../bower_components/famous-angular/dist/famous-angular.css">
 
-<script src="../bower_components/foundation/js/vendor/jquery.js"></script>
-<script src="../bower_components/foundation/js/foundation.min.js"></script>
-<script src="../bower_components/requirejs/require.js"></script>
-<script src="../bower_components/angular/angular.min.js"></script>
-<script src="../bower_components/angular-route/angular-route.js"></script>
-<script src="../bower_components/underscore/underscore.js"></script>
-<script src="../bower_components/famous/famous-global.js"></script>
-<script src="../bower_components/famous-angular/dist/famous-angular.js"></script>
+<script src="/bower_components/foundation/js/vendor/jquery.js"></script>
+<script src="/bower_components/foundation/js/foundation.min.js"></script>
+<!-- <script src="/bower_components/requirejs/require.js"></script> -->
+<script src="/bower_components/angular/angular.min.js"></script>
+<script src="/bower_components/angular-route/angular-route.js"></script>
+<script src="/bower_components/underscore/underscore.js"></script>
+<script src="/bower_components/famous/famous-global.js"></script>
+<script src="/bower_components/famous-angular/dist/famous-angular.js"></script>
 <!--<script>
     //set requirejs's base to where the famous lib folder lives
     require.config({baseUrl: '../bower_components'});
