--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href="//cdnjs.cloudflare.com/ajax/libs/foundation/5.0.3/css/normalize.min.css" rel="stylesheet" type="text/css" />
-<link href="//cdnjs.cloudflare.com/ajax/libs/foundation/5.0.3/css/foundation.min.css" rel="stylesheet" type="text/css" />
-<script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.0.3/js/vendor/jquery.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.0.3/js/foundation.min.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
+<link href="../bower_components/foundation/css/normalize.css" rel="stylesheet" type="text/css" />
+<link href="../bower_components/foundation/css/foundation.css" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" href="../bower_components/famous-angular/dist/famous-angular.css">
+
+<script src="../bower_components/foundation/js/vendor/jquery.js"></script>
+<script src="../bower_components/foundation/js/foundation.min.js"></script>
+<script src="../bower_components/angular/angular.min.js"></script>
+<script src="../bower_components/angular-route/angular-route.js"></script>
+<script src="../bower_components/underscore/underscore.js"></script>
+<script src="../bower_components/famous/famous-global.js"></script>
+<script src="../bower_components/famous-angular/dist/famous-angular.js"></script>
+
 <script src="js/shoof-ui.js"></script>
 <link href="css/shoof.ui.css" rel="stylesheet" type="text/css">
   <meta charset="utf-8">
