--- a/app/index.html
+++ b/app/index.html
@@ -13,11 +13,14 @@
 <script src="../bower_components/famous/famous-global.js"></script>
 <script src="../bower_components/famous-angular/dist/famous-angular.js"></script>
 
+<script src="js/shoof-ui.js"></script>
 <link href="css/shoof.ui.css" rel="stylesheet" type="text/css">
+<script src="js/foundation-starter.js"></script>
+ 
   <meta charset="utf-8">
   <title>Mico SC-02 frontend prototype</title>
 </head>
-<body ng-controller="ShoofCtrl">
+<body ng-controller="wlContainersEngineCtrl">
   
   <div class="row">
     <div class="large-12 columns">
@@ -99,7 +102,7 @@ window.containers['data/Video.json'] = {
 
 
 
- <script src="js/shoof-ui.js"></script>
+
   
 </body>
 </html>
