--- a/app/index.html
+++ b/app/index.html
@@ -13,8 +13,8 @@
 <script src="../bower_components/famous/famous-global.js"></script>
 <script src="../bower_components/famous-angular/dist/famous-angular.js"></script>
 
-<script src="js/shoof-ui.js"></script>
-<link href="css/shoof.ui.css" rel="stylesheet" type="text/css">
+<script src="js/wordlift-containers.js"></script>
+<link href="css/wordlift.containers.css" rel="stylesheet" type="text/css">
 <script src="js/foundation-starter.js"></script>
  
   <meta charset="utf-8">
