Add link to index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div class="large-12 columns">
       <h1>MICO SC-02 Prototypes</h1>
       <ul>
-        <li><a href="app/">WP HTML5/JS angular based frontend prototype</a></li>
+        <li><a href="app/">WP HTML5/JS angular based frontend prototype with Zurb Foundation</a></li>
+        <li><a href="app/">WP HTML5/JS angular based frontend prototype with Famous</a></li>
       </ul>
     </div>
   </div>
