--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>MICO SC-02 Prototypes</h1>
       <ul>
         <li><a href="app/">WP HTML5/JS angular based frontend prototype with Zurb Foundation</a></li>
-        <li><a href="app/">WP HTML5/JS angular based frontend prototype with Famous</a></li>
+        <li><a href="app/famous.html">WP HTML5/JS angular based frontend prototype with Famous</a></li>
       </ul>
     </div>
   </div>
