Fix css innclusion

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
 <script src="../bower_components/angularjs-geolocation/dist/angularjs-geolocation.min.js"></script>
 
 <script src="js/wordlift-containers.js"></script>
-<link href="css/wordlift.containers.css" rel="stylesheet" type="text/css">
+<link href="css/wordlift-containers.css" rel="stylesheet" type="text/css">
 <script src="js/foundation-starter.js"></script>
  
   <meta charset="utf-8">
