--- a/app/famous.html
+++ b/app/famous.html
@@ -16,7 +16,7 @@
 <script src="../bower_components/angularjs-geolocation/dist/angularjs-geolocation.min.js"></script>
 
 <script src="js/wordlift-containers.js"></script>
-<link href="css/wordlift.containers.css" rel="stylesheet" type="text/css">
+<link href="css/wordlift-containers.css" rel="stylesheet" type="text/css">
 <script src="js/famous-starter.js"></script>
 
   <meta charset="utf-8">
