Define dinamically the controller within js starters

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
   <meta charset="utf-8">
   <title>Mico SC-02 frontend prototype</title>
 </head>
-<body ng-controller="wlContainersEngineCtrl">
+<body>
   
   <div class="row">
     <div class="large-12 columns">
