--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
 <script src="../bower_components/famous-angular/dist/famous-angular.js"></script>
 <script src="../bower_components/angularjs-geolocation/dist/angularjs-geolocation.min.js"></script>
 
+<script src="http://jwpsrv.com/library/5yYO2lFjEeSfJCIAC0WXxA.js"></script>
 <script src="js/wordlift-containers.js"></script>
 <link href="css/wordlift-containers.css" rel="stylesheet" type="text/css">
 <script src="js/foundation-starter.js"></script>
@@ -33,11 +34,15 @@
 
   <div class="row">
     <div class="large-7 columns">
-  		<wl-container uri="data/Video.json" stack="stack" listening="userInteractions"></wl-container>
+  		
+      <wl-container uri="data/Video.json" stack="stack" listening="userInteractions"></wl-container>
+      <wl-container uri="data/News1.json" stack="stack"></wl-container>
+
+      <wl-container uri="data/HewaVideo.json" stack="stack" listening=""></wl-container>
     <script type="text/javascript">
-window.containers['data/Video.json'] = {
+window.containers['data/HewaVideo.json'] = {
   "ctn": "Video",
-  "origin": "/data/Video.json",
+  "origin": "/data/HewaVideo.json",
   "items": [
     {
       "id": 17,
@@ -50,11 +55,10 @@ window.containers['data/Video.json'] = {
       }
     }
   ], 
-  "skin": "video"
+  "skin": "hewa-players-loop"
 };
   </script>
 
-  		<wl-container uri="data/News1.json" stack="stack"></wl-container>
 
     </div>
     <div class="large-5 columns">
