Fix jwplayer loading

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
 <script src="../bower_components/famous-angular/dist/famous-angular.js"></script>
 <script src="../bower_components/angularjs-geolocation/dist/angularjs-geolocation.min.js"></script>
 
-<script src="http://jwpsrv.com/library/5yYO2lFjEeSfJCIAC0WXxA.js"></script>
+<script src="//jwpsrv.com/library/5yYO2lFjEeSfJCIAC0WXxA.js"></script>
 <script src="js/wordlift-containers.js"></script>
 <link href="css/wordlift-containers.css" rel="stylesheet" type="text/css">
 <script src="js/foundation-starter.js"></script>
